Update Orbit layout submenu coordinates to use 24-degree spacing to prevent overlaps

--- a/modern_ui.css
+++ b/modern_ui.css
@@ -7989,24 +7989,24 @@ body.region-mode-active #container {
 /* Submenu radial offsets defined via variables to preserve transform translation on hover scale */
 
 /* Bird View (arc expands up-left) */
-.layout-orbit [data-id="birdview"] .orbit-submenu-item:nth-child(1) { --sub-tx: -58px; --sub-ty: 0px; }
+.layout-orbit [data-id="birdview"] .orbit-submenu-item:nth-child(1) { --sub-tx: -68px; --sub-ty: 19px; }
 .layout-orbit [data-id="birdview"] .orbit-submenu-item:nth-child(2) { --sub-tx: -31px; --sub-ty: -33px; }
-.layout-orbit [data-id="birdview"] .orbit-submenu-item:nth-child(3) { --sub-tx: 5px; --sub-ty: -58px; }
+.layout-orbit [data-id="birdview"] .orbit-submenu-item:nth-child(3) { --sub-tx: 25px; --sub-ty: -67px; }
 
 /* Amenities (arc expands up-left to up-right) */
-.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(1) { --sub-tx: -55px; --sub-ty: -24px; }
-.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(2) { --sub-tx: -26px; --sub-ty: -39px; }
-.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(3) { --sub-tx: 5px; --sub-ty: -47px; }
-.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(4) { --sub-tx: 38px; --sub-ty: -48px; }
+.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(1) { --sub-tx: -92px; --sub-ty: 7px; }
+.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(2) { --sub-tx: -41px; --sub-ty: -32px; }
+.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(3) { --sub-tx: 22px; --sub-ty: -48px; }
+.layout-orbit [data-id="amenities"] .orbit-submenu-item:nth-child(4) { --sub-tx: 85px; --sub-ty: -37px; }
 
 /* Architecture (arc expands up) */
-.layout-orbit [data-id="architecture"] .orbit-submenu-item:nth-child(1) { --sub-tx: -32px; --sub-ty: -48px; }
+.layout-orbit [data-id="architecture"] .orbit-submenu-item:nth-child(1) { --sub-tx: -54px; --sub-ty: -46px; }
 .layout-orbit [data-id="architecture"] .orbit-submenu-item:nth-child(2) { --sub-tx: 11px; --sub-ty: -43px; }
-.layout-orbit [data-id="architecture"] .orbit-submenu-item:nth-child(3) { --sub-tx: 51px; --sub-ty: -27px; }
+.layout-orbit [data-id="architecture"] .orbit-submenu-item:nth-child(3) { --sub-tx: 68px; --sub-ty: -15px; }
 
 /* Interior (arc expands up-right) */
-.layout-orbit [data-id="interior"] .orbit-submenu-item:nth-child(1) { --sub-tx: 14px; --sub-ty: -47px; }
-.layout-orbit [data-id="interior"] .orbit-submenu-item:nth-child(2) { --sub-tx: 45px; --sub-ty: -18px; }
+.layout-orbit [data-id="interior"] .orbit-submenu-item:nth-child(1) { --sub-tx: 5px; --sub-ty: -53px; }
+.layout-orbit [data-id="interior"] .orbit-submenu-item:nth-child(2) { --sub-tx: 52px; --sub-ty: -9px; }
 
 /* ---------------------------------------------------------
    ORBIT QUARTER-CIRCLE TOOLBAR
